--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,61 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 /* ********** Navbar ********** */
-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 60px;
-  padding: 0 2rem;
-  background-color: beige;
-  color: brown;
+.navbar {
+  width: 100%;
+  height: 80px;
+  display: grid;
+  grid-template-columns: 10rem 1fr 2fr 1fr 10rem;
+  background-color: rgba(69, 146, 146, 0.253);
 }
 
-nav a {
-  margin: 0 2rem;
-  color: cadetblue;
+.logo {
+  display: flex;
+  color: rgba(86, 10, 167, 0.909);
+  grid-column: 2/3;
+  justify-content: start;
+  align-items: center;
+}
+
+.nav-links {
+  display: flex;
+  grid-column: 3/4;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.nav-links a {
   text-decoration: none;
+  color: rgb(32, 69, 139);
+  font-size: 1.2rem;
+}
+
+.logo h2 {
+  font-size: 2rem;
+}
+
+.nav-button {
+  display: flex;
+  grid-column: 4/5;
+  justify-content: right;
+  align-items: center;
+}
+
+.nav-button button {
+  font-size: 15px;
+  font-weight: 200;
+  background-color: rgb(50, 106, 209);
+  width: 100px;
+  padding: 7px;
+  text-align: center;
+  text-decoration: none;
+  text-transform: capitalize;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  outline: none;
 }
