--- a/src/index.css
+++ b/src/index.css
@@ -21,16 +21,16 @@
   align-items: center;
 }
 
-.nav-links {
+.nav_links {
   display: flex;
   grid-column: 3/4;
   justify-content: space-around;
   align-items: center;
 }
 
-.nav-links a {
+.nav_links a {
   text-decoration: none;
-  color: rgb(32, 69, 139);
+  color: rgb(108, 132, 175);
   font-size: 1.2rem;
 }
 
@@ -38,14 +38,14 @@
   font-size: 2rem;
 }
 
-.nav-button {
+.nav_button {
   display: flex;
   grid-column: 4/5;
   justify-content: right;
   align-items: center;
 }
 
-.nav-button button {
+.nav_button button {
   font-size: 15px;
   font-weight: 200;
   background-color: rgb(50, 106, 209);
@@ -61,10 +61,15 @@
   outline: none;
 }
 
+a.active_class {
+  color: chartreuse;
+  border-bottom: 1px solid rgb(32, 69, 139);
+}
+
 
 /* ********** Hero Section ********** */
 
-.info-section {
+.info_section {
   height: 15rem;
   background-color: rgba(166, 192, 192, 0.253);
   text-align: center;
@@ -73,7 +78,7 @@
 
 /* ********** Card Section ********** */
 
-.card-section {
+.card_section {
   height: 25rem;
   padding: 18% 3%;
   background-color: rgba(110, 171, 171, 0.253);
@@ -101,32 +106,32 @@
   box-shadow: 0 4rem 8rem rgba(0, 0, 0, 0.5);
 }
 
-.card-img {
+.card_img {
   display: block;
   width: 100%;
   height: 10rem;
   object-fit: cover;
 }
 
-.card-info {
+.card_info {
   padding: 1rem;
 }
 
-.card-title {
+.card_title {
   font-size: 1.2rem;
   font-weight: 500;
   color: rgb(22, 31, 131);
   margin-bottom: 1.5rem;
 }
 
-.card-desc {
+.card_desc {
   font-size: 1rem;
   letter-spacing: 0.1rem;
   color: cadetblue;
   margin-bottom: 2.5rem;
 }
 
-.card-btn {
+.card_btn {
   display: block;
   width: 50%;
   padding: 1rem;
@@ -141,7 +146,7 @@
   letter-spacing: 0.1rem;
 }
 
-.card-btn:hover {
+.card_btn:hover {
   color: #fff;
   background-color: #000;
 }
@@ -156,7 +161,7 @@
   grid-template-columns: 10rem 1fr 1.5fr 1fr 1fr 10rem;
 }
 
-.footer-logo {
+.footer_logo {
   display: flex;
   grid-column: 2/3;
   font-size: 2rem;
@@ -165,30 +170,33 @@
   align-items: center;
 }
 
-.footer-links {
+.footer_links {
   grid-column: 3/4;
   display: flex;
   align-items: center;
   justify-content: space-around;
   text-decoration: none;
   font-size: 1.2rem;
-  color: rgb(32, 69, 139);
 }
 
-.social-media {
+a.footer_links {
+  color: rgb(72, 125, 224);
+}
+
+.social_media {
   grid-column: 4/5;
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
 }
 
-.footer-heading {
+.footer_heading {
   display: flex;
   justify-content: right;
   color: rgb(42, 87, 171);
 }
 
-.social-media .media-icons {
+.social_media .media_icons {
   display: flex;
   justify-content: space-around;
   color: aquamarine;
@@ -201,25 +209,25 @@
   align-items: center;
 }
 
-.call-heading {
+.call_heading {
   display: flex;
   justify-content: right;
   color: rgb(42, 87, 171);
 }
 
-.call .call-no {
+.call .call_no {
   display: flex;
   justify-content: right;
   color: aquamarine;
 }
 
-.call .call-no span {
+.call .call_no span {
   margin-left: 5px;
 }
 
 /* ------ Footer bottom ------ */
 
-.footer-bottom {
+.footer_bottom {
   width: 100%;
   height: 2rem;
   background-color: rgba(22, 82, 82, 0.482);
@@ -231,4 +239,140 @@
   justify-content: center;
   font-size: 1rem;
   color: rgb(42, 87, 171);
+}
+
+
+/* ********** ContactUs Form ********** */
+
+.contact {
+  position: relative;
+  min-height: 80vh;
+  padding: 50px 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: rgba(166, 192, 192, 0.253);
+}
+
+.contact .content {
+  max-width: 600px;
+  text-align: center;
+}
+
+.contact .content h2 {
+  font-size: 36px;
+  font-weight: 500;
+  color: rgb(72, 18, 123);
+}
+
+.contact .content p {
+  font-weight: 300;
+  color:darkcyan;
+}
+
+.container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px; 
+}
+
+.container .contact_info {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+}
+
+.container .contact_info .box {
+  position: relative;
+  padding: 20px;
+  display: flex;
+}
+
+.container .contact_info .box .contact_icon {
+  min-width: 60px;
+  height: 60px;
+  background:rgba(31, 159, 159, 0.253);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  font-size: 22px;
+  color: rgb(14, 94, 67);
+}
+
+.container .contact_info .box .text {
+  display: flex;
+  margin-left: 20px;
+  font-size: 16px;
+  color: rgb(60, 125, 125);
+  flex-direction: column;
+  font-weight: 300;
+}
+
+.container .contact_info .box .text h3 {
+  font-weight: 500;
+  color: rgb(19, 105, 105);
+}
+
+.contact_form {
+  width: 40%;
+  padding: 40px;
+  background: rgba(31, 159, 159, 0.253);
+}
+
+.contact_form h2 {
+  font-size: 30px;
+  font-weight: 500;
+  color: rgb(72, 18, 123);
+}
+
+.contact_form .input_box {
+  position: relative;
+  width: 100%;
+  margin-top: 10px;
+}
+
+.contact_form .input_box input,
+.contact_form .input_box textarea {
+  width: 100%;
+  padding: 5px 0;
+  font-size: 16px;
+  margin: 10px 0;
+  border: none;
+  border-bottom: 2px solid rgba(8, 252, 252, 0.719);
+  outline: none;
+  resize: none;
+}
+
+.contact_form .input_box span {
+  position: absolute;
+  left: 0;
+  padding: 5px 0;
+  font-size: 16px;
+  margin: 10px 0;
+  pointer-events: none;
+  transition: 0.5s;
+  color: rgba(4, 95, 95, 0.571);
+}
+
+.contact_form .input_box input:focus ~ span,
+.contact_form .input_box input:valid ~ span,
+.contact_form .input_box textarea:focus ~ span,
+.contact_form .input_box textarea:valid ~ span {
+  color: brown;
+  font-size: 12px;
+  transform: translateY(-20px);
+}
+
+.contact_form .input_box input[type='submit']{
+  width: 100px;
+  background: rgba(5, 82, 82, 0.824);
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  font-size: 18px;
 }
